--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 	<script src="https://raw.github.com/kriskowal/es5-shim/master/es5-shim.min.js"></script>
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
 	<script src="yass.js"></script>
-	<script type="text/javascript" charset="utf-8">
+	<script>
 		$('.yass-example').yass();
 	</script>
 </body>
